# xlea

./: .gitignore  README.md  pyproject.toml
examples/: openpyxl_provider.py  test_data.xlsx
tests/core/: test_bound_schema.py  test_column.py  test_empty_row_bug.py
xlea/: __init__.py  exc.py
xlea/core/: bound_schema.py  column.py  reader.py  row.py  schema.py
xlea/providers/: openpyxl.py  proto.py  providers.py  pyxlsb.py  xlrd.py
